--- a/LHL Midterm/LHL Midterm/Info.plist
+++ b/LHL Midterm/LHL Midterm/Info.plist
@@ -43,5 +43,7 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Ability to see user&apos;s location</string>
 </dict>
 </plist>
